--- a/css/styles.css
+++ b/css/styles.css
@@ -258,10 +258,10 @@ h1 {
     background: url(../img/img_mountains02.JPG) no-repeat center center;
     background-size: cover; }
   #slide02 .bcg {
-    background: url(img_mountains03.JPG) no-repeat center center;
+    background: url(./img/img_mountains02.JPG) no-repeat center center;
     background-size: cover; }
   #slide03 .bcg {
-    background: url(img_mountains04.JPG) no-repeat center center;
+    background: url(./img/img_mountains02.JPG) no-repeat center center;
     background-size: cover;
     opacity: 0.7; }
 
