--- a/css/styles.css
+++ b/css/styles.css
@@ -255,13 +255,13 @@ h1 {
     background-image: url(../img/img_mountains01.JPG);
     background-size: cover; }
   #slide01 .bcg {
-    background: url(../img/img_mountains02.JPG) no-repeat center center;
+    background: url(img_mountains02.JPG) no-repeat center center;
     background-size: cover; }
   #slide02 .bcg {
-    background: url(./img/img_mountains02.jpg) no-repeat center center;
+    background: url(img_mountains03.JPG) no-repeat center center;
     background-size: cover; }
   #slide03 .bcg {
-    background: url(./img/img_mountains02.jpg) no-repeat center center;
+    background: url(img_mountains04.JPG) no-repeat center center;
     background-size: cover;
     opacity: 0.7; }
 
