--- a/css/styles.css
+++ b/css/styles.css
@@ -415,6 +415,7 @@ p {
   .footer-container h6 {
     margin: 0;
     padding: 20px 0;
+    padding-bottom: 20px;
     font-weight: normal; }
   .footer-container a {
     color: rgba(255, 255, 255, 0.5); }
