--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Gamja+Flower'
+
 .clear:before, .clear:after {
   content: ' ';
   display: table; }
@@ -21,6 +23,11 @@
 
   .title {
     font-size: 32px;
+  }
+
+  .quote {
+    font-family: 'Gamja',Flower;
+  
   }
 
  
