--- a/css/styles.css
+++ b/css/styles.css
@@ -22,11 +22,12 @@
   }
 
   .title {
-    font-size: 32px;
+    font-size: 28px;
   }
 
+
   .quote {
-    font-family: 'Gamja',Flower;
+    font-family: 'Berkshire',Swash;
   
   }
 
