--- a/css/styles_s.css
+++ b/css/styles_s.css
@@ -15,6 +15,22 @@
     background-color:#c7cdd3;
    
   }
+
+  #title {
+    color: #b8c0c7;
+    font-family: 'Abril Fatface', cursive;
+    font-size: 68px;
+    text-align: center;
+  }
+
+  #titledd {
+    color: #b8c0c7;
+    
+    font-size: 18px;
+    text-align: left;
+  }
+
+
   
   a {
     color: white;
