--- a/css/fluid-gallery.css
+++ b/css/fluid-gallery.css
@@ -2,7 +2,8 @@ body {
     background-color: #434c50;
     min-height: 100vh;
     font: normal 16px sans-serif;
-    padding: 40px 0;
+    padding: 0px 0;
+    margin: 0;
 }
 
 .container.gallery-container {
