patch for mobile

--- a/css/styles_s.css
+++ b/css/styles_s.css
@@ -16,7 +16,15 @@
    
   }
 
- 
+  #superWrapper {
+    height: 100%;
+}
+
+.scrollContainer {
+    overflow-y: scroll;
+    overflow-x: hidden;
+    width: 100%;
+}
 .title {
   font-size: 40px
 }
